// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Other tests "Riminder" object relative tests it should throw an error when no key is given 1`] = `"No API Key was supplied for Riminder SDK"`;

exports[`Other tests http module relative tests It should throw an error if the error code is not 200 or 201 1`] = `[Error: An error occured]`;

exports[`Other tests http module relative tests it should throw an error if something went wrong with the request 1`] = `[Error: Error message]`;

exports[`Wrapper test Filter endpoints It should call the get filter list endpoint 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/filters",
    "path": "/v1/filters",
    "pathname": "/v1/filters",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Filter endpoints It sould call the get filter endpoint with the filter id 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/filter?filter_id=filter_id",
    "path": "/v1/filter?filter_id=filter_id",
    "pathname": "/v1/filter",
    "port": null,
    "protocol": "https:",
    "query": "filter_id=filter_id",
    "search": "?filter_id=filter_id",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Filter endpoints It sould call the get filter endpoint with the filter reference 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/filter?filter_reference=filter_reference",
    "path": "/v1/filter?filter_reference=filter_reference",
    "pathname": "/v1/filter",
    "port": null,
    "protocol": "https:",
    "query": "filter_reference=filter_reference",
    "search": "?filter_reference=filter_reference",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the check profile data endpoint 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "Content-type": "application/json",
      "X-API-Key": "api_key",
    },
    "method": "POST",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profile/json/check",
    "path": "/v1/profile/json/check",
    "pathname": "/v1/profile/json/check",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile document endpoint with the profile id 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profile/documents?source_id=source_id&profile_id=profile_id",
    "path": "/v1/profile/documents?source_id=source_id&profile_id=profile_id",
    "pathname": "/v1/profile/documents",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_id=profile_id",
    "search": "?source_id=source_id&profile_id=profile_id",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile document endpoint with the profile reference 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profile/documents?source_id=source_id&profile_reference=profile_reference",
    "path": "/v1/profile/documents?source_id=source_id&profile_reference=profile_reference",
    "pathname": "/v1/profile/documents",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_reference=profile_reference",
    "search": "?source_id=source_id&profile_reference=profile_reference",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile endpoint using Date number 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profiles?source_ids=[%22source1%22,%22source2%22]&date_start=0&date_end=1514764800&page=1&seniority=all&filter_id=filter_id&filter_reference=filter_reference&stage=YES&rating=1&limit=30&sort_by=reception&order_by=desc",
    "path": "/v1/profiles?source_ids=[%22source1%22,%22source2%22]&date_start=0&date_end=1514764800&page=1&seniority=all&filter_id=filter_id&filter_reference=filter_reference&stage=YES&rating=1&limit=30&sort_by=reception&order_by=desc",
    "pathname": "/v1/profiles",
    "port": null,
    "protocol": "https:",
    "query": "source_ids=[%22source1%22,%22source2%22]&date_start=0&date_end=1514764800&page=1&seniority=all&filter_id=filter_id&filter_reference=filter_reference&stage=YES&rating=1&limit=30&sort_by=reception&order_by=desc",
    "search": "?source_ids=[%22source1%22,%22source2%22]&date_start=0&date_end=1514764800&page=1&seniority=all&filter_id=filter_id&filter_reference=filter_reference&stage=YES&rating=1&limit=30&sort_by=reception&order_by=desc",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile endpoint using Date object 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profiles?source_ids=[%22source1%22,%22source2%22]&date_start=0&date_end=1&page=1&seniority=all&filter_id=filter_id&filter_reference=filter_reference&stage=YES&rating=1&limit=30&sort_by=reception&order_by=desc",
    "path": "/v1/profiles?source_ids=[%22source1%22,%22source2%22]&date_start=0&date_end=1&page=1&seniority=all&filter_id=filter_id&filter_reference=filter_reference&stage=YES&rating=1&limit=30&sort_by=reception&order_by=desc",
    "pathname": "/v1/profiles",
    "port": null,
    "protocol": "https:",
    "query": "source_ids=[%22source1%22,%22source2%22]&date_start=0&date_end=1&page=1&seniority=all&filter_id=filter_id&filter_reference=filter_reference&stage=YES&rating=1&limit=30&sort_by=reception&order_by=desc",
    "search": "?source_ids=[%22source1%22,%22source2%22]&date_start=0&date_end=1&page=1&seniority=all&filter_id=filter_id&filter_reference=filter_reference&stage=YES&rating=1&limit=30&sort_by=reception&order_by=desc",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile endpoint with the profile id 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profile?source_id=source_id&profile_id=profile_id",
    "path": "/v1/profile?source_id=source_id&profile_id=profile_id",
    "pathname": "/v1/profile",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_id=profile_id",
    "search": "?source_id=source_id&profile_id=profile_id",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile endpoint with the profile reference 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profile?source_id=source_id&profile_reference=profile_reference",
    "path": "/v1/profile?source_id=source_id&profile_reference=profile_reference",
    "pathname": "/v1/profile",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_reference=profile_reference",
    "search": "?source_id=source_id&profile_reference=profile_reference",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile parsing endpoint with the profile id 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profile/parsing?source_id=source_id&profile_id=profile_id",
    "path": "/v1/profile/parsing?source_id=source_id&profile_id=profile_id",
    "pathname": "/v1/profile/parsing",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_id=profile_id",
    "search": "?source_id=source_id&profile_id=profile_id",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile parsing endpoint with the profile reference 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profile/parsing?source_id=source_id&profile_reference=profile_reference",
    "path": "/v1/profile/parsing?source_id=source_id&profile_reference=profile_reference",
    "pathname": "/v1/profile/parsing",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_reference=profile_reference",
    "search": "?source_id=source_id&profile_reference=profile_reference",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile scoring endpoint with the profile id 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profile/scoring?source_id=source_id&profile_id=profile_id",
    "path": "/v1/profile/scoring?source_id=source_id&profile_id=profile_id",
    "pathname": "/v1/profile/scoring",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_id=profile_id",
    "search": "?source_id=source_id&profile_id=profile_id",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile scoring endpoint with the profile reference 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profile/scoring?source_id=source_id&profile_reference=profile_reference",
    "path": "/v1/profile/scoring?source_id=source_id&profile_reference=profile_reference",
    "pathname": "/v1/profile/scoring",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_reference=profile_reference",
    "search": "?source_id=source_id&profile_reference=profile_reference",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the patch rating endpoint with the the profile id and filter id 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "Content-type": "application/json",
      "X-API-Key": "api_key",
    },
    "method": "PATCH",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profile/rating",
    "path": "/v1/profile/rating",
    "pathname": "/v1/profile/rating",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the patch rating endpoint with the the profile id and filter reference 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "Content-type": "application/json",
      "X-API-Key": "api_key",
    },
    "method": "PATCH",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profile/rating",
    "path": "/v1/profile/rating",
    "pathname": "/v1/profile/rating",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the patch rating endpoint with the the profile reference and filter id 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "Content-type": "application/json",
      "X-API-Key": "api_key",
    },
    "method": "PATCH",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profile/rating",
    "path": "/v1/profile/rating",
    "pathname": "/v1/profile/rating",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the patch rating endpoint with the the profile reference and filter reference 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "Content-type": "application/json",
      "X-API-Key": "api_key",
    },
    "method": "PATCH",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profile/rating",
    "path": "/v1/profile/rating",
    "pathname": "/v1/profile/rating",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the patch stage endpoint with the the profile id and filter id 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "Content-type": "application/json",
      "X-API-Key": "api_key",
    },
    "method": "PATCH",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profile/stage",
    "path": "/v1/profile/stage",
    "pathname": "/v1/profile/stage",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the patch stage endpoint with the the profile id and filter reference 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "Content-type": "application/json",
      "X-API-Key": "api_key",
    },
    "method": "PATCH",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profile/stage",
    "path": "/v1/profile/stage",
    "pathname": "/v1/profile/stage",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the patch stage endpoint with the the profile reference and filter id 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "Content-type": "application/json",
      "X-API-Key": "api_key",
    },
    "method": "PATCH",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profile/stage",
    "path": "/v1/profile/stage",
    "pathname": "/v1/profile/stage",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the patch stage endpoint with the the profile reference and filter reference 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "Content-type": "application/json",
      "X-API-Key": "api_key",
    },
    "method": "PATCH",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profile/stage",
    "path": "/v1/profile/stage",
    "pathname": "/v1/profile/stage",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the post profile data endpoint 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "Content-type": "application/json",
      "X-API-Key": "api_key",
    },
    "method": "POST",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profile/json",
    "path": "/v1/profile/json",
    "pathname": "/v1/profile/json",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the post resume endpoint 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-Key": "api_key",
    },
    "method": "POST",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/profile",
    "path": "/v1/profile",
    "pathname": "/v1/profile",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Source endpoints It should call the get source endpoint 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/source?source_id=id",
    "path": "/v1/source?source_id=id",
    "pathname": "/v1/source",
    "port": null,
    "protocol": "https:",
    "query": "source_id=id",
    "search": "?source_id=id",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Source endpoints It should call the get source list endpoint 1`] = `
Object {
  "options": Object {
    "credentials": "include",
    "headers": Object {
      "X-API-Key": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "www.riminder.net",
    "hostname": "www.riminder.net",
    "href": "https://api.hrflow.ai/v1/sources",
    "path": "/v1/sources",
    "pathname": "/v1/sources",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;
